# imfind

./: FINDME.md  Makefile  README.md  pyproject.toml
include/examples/misc/: misc-7.HEIC
src/imfind/: __init__.py  core.py
src/imfind/etc/: __init__.py
src/imfind/lib/: __init__.py  config.py  helpers.py  image.py  image_and_text.py  test_load_llava.py
tests/: test_example.py
