[project]
name = "imfind"
version = "0.0.8"
authors = [
    { name="Ramya Kottapalli", email="rskottap@gmail.com" },
]
description = "Local AI image finder."
dependencies = [
    "pytest",
    "requests",
    "torch",
    "numpy<2.0",
    "transformers",
    "accelerate>=0.26.0",
    "easyocr",
    "Pillow",
    "pillow-heif",
    "assure",
    "mmry",
    "embd",
]

[project.urls]
source = "https://github.com/rskottap/imfind"
download = "https://pypi.org/project/imfind/#files"

[project.scripts]
imfind = "imfind.bin.imfind:main"
